--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,4 +5,4 @@
   GgrBlog application.
 </p>
 
-<%= link_to "Sign up now!", '#', :class => "signup_button round" %>
+<%= link_to "Sign up now!", 'signup', :class => "signup_button round" %>
