--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -188,3 +188,12 @@ div.field, div.actions {
   list-style: square;
 }
 
+/* User index page */
+
+ul.users {
+  margin-top: 1em;
+}
+
+.users li {
+  list-style: none;
+}
