--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,5 +1,4 @@
-<h1>Contact</h1>
+<h1>Contacto</h1>
 <p>
-  Contact Ruby on Rails Tutorial about the GgrBlog app at the
-  <a href="http://railstutorial.org/feedback">feedback page</a>.
+
 </p>
