--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,10 +1,10 @@
 <footer>
   <nav class="round">
     <ul>
-      <li><%= link_to "About", about_path %></li>
-      <li><%= link_to "Contact", contact_path %></li>
-      <li><a href="http://news.railstutorial.org/">News</a></li>
-      <li><a href="http://www.railstutorial.org/">Rails Tutorial</a></li>
+      <li><%= link_to "Nosotros", about_path %></li>
+      <li><%= link_to "Contacto", contact_path %></li>
+      <li><%= link_to "Noticias", "" %></li>
+      <li><%= link_to "Privacidad", "" %></li>
     </ul>
   </nav>
 </footer>
