--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <table class="front" summary="For signed-in users">
     <tr>
       <td class="main">
-        <h1 class="micropost">What's up?</h1>
+        <h1 class="micropost">¿Qué está pasando?</h1>
         <%= render 'shared/micropost_form' %>
         <%= render 'shared/feed' %>
       </td>
@@ -13,13 +13,11 @@
     </tr>
   </table>
 <% else %>
-  <h1>Sample App</h1>
+  <h1>GgrAplication</h1>
 
   <p>
-    This is the home page for the
-    <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-    sample application.
+    Esta es la página principal de la GgrAplication.
   </p>
 
-  <%= link_to "Sign up now!", signup_path, :class => "signup_button round" %>
+  <%= link_to "Resgístrate!", signup_path, :class => "signup_button round" %>
 <% end %>
