--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -8,13 +8,13 @@
     </span>
     <span class="content"><%= feed_item.content %></span>
     <span class="timestamp">
-      Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
+      hace <%= time_ago_in_words(feed_item.created_at) %>
     </span>
   </td>
   <% if current_user?(feed_item.user) %>
   <td>
-    <%= link_to "delete", feed_item, :method => :delete,
-                                     :confirm => "You sure?",
+    <%= link_to "eliminar", feed_item, :method => :delete,
+                                     :confirm => "¿Estás seguro?",
                                      :title => feed_item.content %>
   </td>
   <% end %>
