--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -5,14 +5,14 @@
       <td>
         <a href="<%= following_user_path(@user) %>">
           <span id="following" class="stat">
-            <%= @user.following.count %> following
+            <%= @user.following.count %> Siguiendo
           </span>
         </a>
       </td>
       <td>
         <a href="<%= followers_user_path(@user) %>">
           <span id="followers" class="stat">
-            <%= pluralize(@user.followers.count, "follower") %>
+            <%= pluralize(@user.followers.count, "Seguidores") %>
           </span>
         </a>
       </td>
