--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -2,7 +2,7 @@
   <%= gravatar_for user, :size => 30 %>
   <%= link_to user.name, user %>
   <% if current_user.admin? %>
-  | <%= link_to "delete", user, :method => :delete, :confirm => "You sure?",
-                                :title => "Delete #{user.name}" %>
+  | <%= link_to "eliminar", user, :method => :delete, :confirm => "¿Estás seguro?",
+                                :title => "Eliminar #{user.name}" %>
   <% end %>
 </li>
