--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -16,7 +16,7 @@
   <h1>GgrAplication</h1>
 
   <p>
-    Esta es la página principal de la GgrAplication.
+    Esta es la página principal de granPa.com.
   </p>
 
   <%= link_to "Resgístrate!", signup_path, :class => "signup_button round" %>
