--- a/app/views/user_mailer/registration_confirmation.html.erb
+++ b/app/views/user_mailer/registration_confirmation.html.erb
@@ -1,7 +1,7 @@
 <p><%= @user.name %>,</p>
 
-<p>¡Gracias por registrarte en GgrAplication!</p>
+<p>¡Gracias por registrarte en granPa.com!</p>
 
 <p>Un saludo y espero que disfrutes.</p>
 
-<p>El equipo de GgrAplication</p>
+<p>El equipo de granPa.com</p>
