--- a/app/views/user_mailer/registration_confirmation.text.erb
+++ b/app/views/user_mailer/registration_confirmation.text.erb
@@ -1,7 +1,7 @@
 <%= @user.name %>,
 
-¡Gracias por registrarte en GgrAplication!
+¡Gracias por registrarte en granPa.com!
 
 Un saludo y espero que disfrutes.
 
-El equipo de GgrAplication.
+El equipo de granPa.com.
