--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,7 @@
   <table class="front" summary="For signed-in users">
     <tr>
       <td class="main">
-        <h1 class="micropost">¿Qué está pasando?</h1>
+        <h1 class="micropost">¡¡Escribe lo que quieras!!</h1>
         <%= render 'shared/micropost_form' %>
         <%= render 'shared/feed' %>
       </td>
@@ -13,10 +13,10 @@
     </tr>
   </table>
 <% else %>
-  <h1>GgrAplication</h1>
+  <h1>granPa.com</h1>
 
   <p>
-    Esta es la página principal de granPa.com.
+    Bienvenido a granPa.com. Esta es la página principal.
   </p>
 
   <%= link_to "Resgístrate!", signup_path, :class => "signup_button round" %>
